Fix style on small screen

--- a/Main/static/assets/css/search.css
+++ b/Main/static/assets/css/search.css
@@ -142,6 +142,14 @@ h1, h2, p {
 
         }
 
+        #search .results .quizzes h2 {
+            grid-column: 1/1;
+        }
+
+        #search .results .users h2 {
+            grid-column: 1/1;
+        }
+
     }
 
 }
